--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -274,6 +274,19 @@
   url       = {https://broadviewpress.com/product/the-broadview-anthology-of-restoration-and-early-eighteenth-century-drama/?ph=95bf68a5569261c0022b0608},
 }
 
+@Article{Adolphs2010,
+  author    = {Adolphs, R.},
+  title     = {What does the amygdala contribute to social cognition?},
+  journal   = {Annals of the New York Academy of Sciences},
+  year      = {2010},
+  volume    = {1191},
+  number    = {1},
+  pages     = {42-61},
+  doi       = {10.1111/j.1749-6632.2010.05445.x},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Book{Aebischer2004,
   title     = {Shakespeare's Violated Bodies: Stage and Screen Performance},
   publisher = {Cambridge University Press},
@@ -3965,6 +3978,19 @@
   url       = {https://benjamins.com/catalog/scl.28},
 }
 
+@Article{Bickart2012,
+  author    = {Bickart, K. C. and Hollenbeck, M. C. and Barrett, L. F. and Dickerson, B. C.},
+  title     = {Intrinsic Amygdala-Cortical Functional Connectivity Predicts Social Network Size in Humans},
+  journal   = {Journal of Neuroscience},
+  year      = {2012},
+  volume    = {32},
+  number    = {42},
+  pages     = {14729-14741},
+  doi       = {10.1523/jneurosci.1599-12.2012},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Biddle1986,
   author    = {Biddle, B. J.},
   title     = {Recent Developments in Role Theory},
@@ -4181,6 +4207,18 @@
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://dl.acm.org/citation.cfm?id=1596416},
+}
+
+@Article{Blagrove2010,
+  author    = {Blagrove, M. and Pace-Schott, E. F.},
+  title     = {Trait And Neurobiological Correlates Of Individual Differences In Dream Recall And Dream Content},
+  journal   = {International Review of Neurobiology},
+  year      = {2010},
+  volume    = {92},
+  pages     = {155-180},
+  doi       = {10.1016/s0074-7742(10)92008-4},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Electronic{Blambot2022,
@@ -5422,6 +5460,19 @@
   timestamp = {2019.04.12},
 }
 
+@Article{Brands2013,
+  author    = {Brands, R. A.},
+  title     = {Cognitive social structures in social network research: A review},
+  journal   = {Journal of Organizational Behavior},
+  year      = {2013},
+  volume    = {34},
+  number    = {S1},
+  pages     = {S82-S103},
+  doi       = {10.1002/job.1890},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Book{Branigan2013,
   title     = {Narrative Comprehension and Film},
   publisher = {Routledge},
@@ -6008,6 +6059,19 @@
   url       = {https://books.google.fr/books/about/Bulfinch_s_Greek_and_Roman_Mythology.html?id=zuuHH68GN88C&redir_esc=y},
 }
 
+@Article{Bullmore2009,
+  author    = {Bullmore, E. and Sporns, O.},
+  title     = {Complex brain networks: graph theoretical analysis of structural and functional systems},
+  journal   = {Nature Reviews Neuroscience},
+  year      = {2009},
+  volume    = {10},
+  number    = {3},
+  pages     = {186-198},
+  doi       = {10.1038/nrn2575},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Bunke1997,
   author    = {Bunke, H.},
   title     = {On a relation between graph edit distance and maximum common subgraph},
@@ -6419,6 +6483,19 @@
   doi       = {10.5642/jhummath.201601.15},
   owner     = {Vincent},
   timestamp = {2019.08.18},
+}
+
+@Article{Cai2009,
+  author    = {Cai, D. J. and Mednick, S. A. and Harrison, E. M. and Kanady, J. C. and Mednick, S. C.},
+  title     = {{REM}, not incubation, improves creativity by priming associative networks},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2009},
+  volume    = {106},
+  number    = {25},
+  pages     = {10130-10134},
+  doi       = {10.1073/pnas.0900271106},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Cai2017b,
@@ -7206,6 +7283,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1145/1520340.1520539},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Article{Chan2010,
+  author    = {Chan, K. Y. and Vitevitch, M. S.},
+  title     = {Network Structure Influences Speech Production},
+  journal   = {Cognitive Science},
+  year      = {2010},
+  volume    = {34},
+  number    = {4},
+  pages     = {685-697},
+  doi       = {10.1111/j.1551-6709.2010.01100.x},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{ChandraKala2012,
@@ -9627,6 +9717,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp     = {2018.11.17},
 }
 
+@Article{DArgembeau2004,
+  author    = {D'Argembeau, A. and Van der Linden, M.},
+  title     = {Phenomenal characteristics associated with projecting oneself back into the past and forward into the future: Influence of valence and temporal distance},
+  journal   = {Consciousness and Cognition},
+  year      = {2004},
+  volume    = {13},
+  number    = {4},
+  pages     = {844-858},
+  doi       = {10.1016/j.concog.2004.07.007},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Das2014,
   author    = {Das, D. and Chen, D. and Martins, A. F. T. and Schneider, N. and Smith, N. A.},
   title     = {Frame-Semantic Parsing},
@@ -10647,6 +10750,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2022.06.21},
   url       = {https://www.apa.org/pubs/books/431688A},
+}
+
+@Article{Domhoff2008,
+  author    = {Domhoff, G. W. and Schneider, A.},
+  title     = {Studying dream content using the archive and search engine on {DreamBank}.net},
+  journal   = {Consciousness and Cognition},
+  year      = {2008},
+  volume    = {17},
+  number    = {4},
+  pages     = {1238-1247},
+  doi       = {10.1016/j.concog.2008.06.010},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @InProceedings{Domingos2001,
@@ -11690,6 +11806,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.13},
 }
 
+@Article{Eguiluz2005,
+  author    = {Eguíluz, V. M. and Chialvo, D. R. and Cecchi, G. A. and Baliki, M. and Apkarian, A. V.},
+  title     = {Scale-Free Brain Functional Networks},
+  journal   = {Physical Review Letters},
+  year      = {2005},
+  volume    = {94},
+  number    = {1},
+  doi       = {10.1103/physrevlett.94.018102},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @PhdThesis{Ehrmann2008,
   author    = {Ehrmann, M.},
   title     = {Les entités nommées, de la linguistique au TAL : statut théorique et méthodes de désambiguïsation},
@@ -12320,6 +12448,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1103/PhysRevE.77.036111},
   owner     = {Vincent},
   timestamp = {2012.08.29},
+}
+
+@Article{Estrada2011,
+  author    = {Estrada, E.},
+  title     = {Combinatorial study of degree assortativity in networks},
+  journal   = {Physical Review E},
+  year      = {2011},
+  volume    = {84},
+  number    = {4},
+  doi       = {10.1103/physreve.84.047101},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Book{Estrada2011a,
@@ -13679,6 +13819,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.07.22},
 }
 
+@Article{Foster2011,
+  author    = {Foster, D. V. and Foster, J. G. and Grassberger, P. and Paczuski, M.},
+  title     = {Clustering drives assortativity and community structure in ensembles of networks},
+  journal   = {Physical Review E},
+  year      = {2011},
+  volume    = {84},
+  number    = {6},
+  pages     = {066117},
+  doi       = {10.1103/PhysRevE.84.066117},
+  owner     = {Vincent},
+  timestamp = {2012.07.16},
+}
+
 @Book{Foucault2003,
   title     = {Society Must Be Defended: Lectures at the Collège de France, 1975-1976},
   publisher = {Picador},
@@ -13707,6 +13860,31 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://books.google.fr/books/about/Kinds_of_Literature.html?id=63sLAQAAMAAJ&redir_esc=y},
+}
+
+@Article{Fox2013,
+  author    = {Fox, K. C. R. and Nijeboer, S. and Solomonova, E. and Domhoff, G. W. and Christoff, K.},
+  title     = {Dreaming as mind wandering: evidence from functional neuroimaging and first-person content reports},
+  journal   = {Frontiers in Human Neuroscience},
+  year      = {2013},
+  volume    = {7},
+  pages     = {412},
+  doi       = {10.3389/fnhum.2013.00412},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
+@Article{Franceschet2012,
+  author    = {Franceschet, M0},
+  title     = {The large-scale structure of journal citation networks},
+  journal   = {Journal of the American Society for Information Science and Technology},
+  year      = {2012},
+  volume    = {63},
+  number    = {4},
+  pages     = {837-842},
+  doi       = {10.1002/asi.22608},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Electronic{Francis1964,
@@ -14870,6 +15048,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.pearson.com/us/higher-education/product/Giannetti-Understanding-Movies-13th-Edition/9780205856169.html},
 }
 
+@Book{Gibbons1985,
+  title     = {Algorithmic graph theory},
+  publisher = {Cambridge University Press},
+  year      = {1985},
+  author    = {Gibbons, A.},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://www.cambridge.org/fr/academic/subjects/computer-science/algorithmics-complexity-computer-algebra-and-computational-g/algorithmic-graph-theory},
+}
+
 @Article{Gibson2015,
   author    = {Gibson, A.},
   title     = {Our Mutual Friend and Network Form},
@@ -15798,6 +15986,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://books.google.fr/books/about/Gods_and_mortals_in_classical_mythology.html?id=Z8xXAAAAYAAJ},
 }
 
+@Article{Gravino2012,
+  author    = {Gravino, P. and Servedio, V. D. and Barrat, A. and Loreto, V.},
+  title     = {Complex structures and semantics in free word association},
+  journal   = {Advances in Complex Systems},
+  year      = {2012},
+  volume    = {15},
+  number    = {03n04},
+  pages     = {1250054},
+  doi       = {10.1142/s0219525912500543},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Book{GrayduPlessix2008,
   title     = {Madame de Staël: The First Modern Woman},
   publisher = {Atlas \& Co.},
@@ -16052,6 +16253,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1086/230140},
   owner     = {Vincent},
   timestamp = {2020.07.23},
+}
+
+@Article{Griffiths2007,
+  author    = {Griffiths, T. L. and Steyvers, M. and Firl, A.},
+  title     = {Google and the mind predicting fluency with pagerank},
+  journal   = {Psychological Science},
+  year      = {2007},
+  volume    = {18},
+  number    = {12},
+  pages     = {1069-1076},
+  doi       = {10.1111/j.1467-9280.2007.02027.x},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Grimm2005,
@@ -16735,6 +16949,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.11},
 }
 
+@PhdThesis{Han2014,
+  author    = {Han, H. J.},
+  title     = {Structural and longitudinal analysis of cognitive social networks in dreams},
+  school    = {Purdue University},
+  year      = {2014},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://docs.lib.purdue.edu/dissertations/AAI3669238/},
+}
+
 @Article{Han2015b,
   author    = {Han, H. J. and Schweickert, R. and Xi, Z. and Viau-Quesnel, C.},
   title     = {The Cognitive Social Network in Dreams: Transitivity, Assortativity, and Giant Component Proportion Are Monotonic},
@@ -17125,6 +17350,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.2307/2346830},
   owner     = {Vincent},
   timestamp = {2020.12.12},
+}
+
+@Book{Hartmann1998,
+  title     = {Dreams and nightmares: The origin and meaning of dreams},
+  publisher = {Perseus Publishing},
+  year      = {1998},
+  author    = {Hartmann, E.},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://books.google.fr/books/about/Dreams_And_Nightmares.html},
 }
 
 @InProceedings{Hasan2013,
@@ -17838,6 +18073,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.21},
 }
 
+@Article{Hills2012,
+  author    = {Hills, T. T. and Jones, M. N. and Todd, P. M.},
+  title     = {Optimal foraging in semantic memory},
+  journal   = {Psychological Review},
+  year      = {2012},
+  volume    = {119},
+  number    = {2},
+  pages     = {431-440},
+  doi       = {10.1037/a0027373},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
+@Article{Hills2012a,
+  author    = {Hills, T. T. and Pachur, T.},
+  title     = {Dynamic search and working memory in social recall},
+  journal   = {Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  year      = {2012},
+  volume    = {38},
+  number    = {1},
+  pages     = {218-228},
+  doi       = {10.1037/a0025161},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Electronic{Hillsdon2013,
   author       = {Hillsdon, A.},
   month        = {05},
@@ -18168,6 +18429,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.socnet.2004.01.007},
   owner     = {Vincent},
   timestamp = {2011.10.24},
+}
+
+@Article{Holme2007,
+  author    = {Holme, P. and Zhao, J.},
+  title     = {Exploring the assortativity-clustering space of a network's degree sequence},
+  journal   = {Physical Review E},
+  year      = {2007},
+  volume    = {75},
+  number    = {4},
+  pages     = {046111},
+  doi       = {10.1103/physreve.75.046111},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Holme2012,
@@ -18550,6 +18824,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.18},
   url       = {http://asus.myds.me:6543/paper/ktall/37%20-%201984%20-%20Efficient,%20High-Quality%20Force-Directed%20Graph%20Drawing.pdf},
+}
+
+@Article{Hu2009,
+  author    = {Hu, H.-B. and Wang, X.-F.},
+  title     = {Disassortative mixing in online social networks},
+  journal   = {Europhysics Letters},
+  year      = {2009},
+  volume    = {86},
+  number    = {1},
+  pages     = {18003},
+  doi       = {10.1209/0295-5075/86/18003},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Hu2013,
@@ -19179,6 +19466,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ACPR.2015.7486541},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@InProceedings{Iyengar2011,
+  author    = {Iyengar, S. and Zweig, N. and Natarajan, A. and Madhavan, V.},
+  title     = {A network analysis approach to understand human-wayfinding problem},
+  booktitle = {Annual Meeting of the Cognitive Science Society},
+  year      = {2011},
+  volume    = {33},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://escholarship.org/uc/item/62x4q95s},
 }
 
 @InProceedings{Iyyer2015,
@@ -20781,6 +21079,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.05.02},
 }
 
+@Article{Keeling1999,
+  author    = {Keeling, M. J.},
+  title     = {The effects of local spatial structure on epidemiological invasions},
+  journal   = {Proceedings of the Royal Society of London. Series B: Biological Sciences},
+  year      = {1999},
+  volume    = {266},
+  number    = {1421},
+  pages     = {859-867},
+  doi       = {10.1098/rspb.1999.0716},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @InProceedings{Keim2007,
   author    = {Keim, D. A. and Oelke, D.},
   title     = {Literature Fingerprinting: A New Method for Visual Literary Analysis},
@@ -20873,6 +21184,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/956750.956769},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Book{Kendall1952,
+  title     = {The advanced theory of statistics},
+  publisher = {Hafner},
+  year      = {1952},
+  author    = {Kendall, M. G.},
+  volume    = {1},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {http://www.ru.ac.bd/stat/wp-content/uploads/sites/25/2019/03/302_05_Kendall-Advanced-Theory-of-Statistics-3rd-Edition-2010.pdf},
 }
 
 @Article{Kenna2010,
@@ -22083,6 +22405,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.21},
   url       = {https://www.ucpress.edu/book/9780520221383/overhearing-film-dialogue},
+}
+
+@Article{Krackhardt1987,
+  author    = {Krackhardt, D.},
+  title     = {Cognitive social structures},
+  journal   = {Social Networks},
+  year      = {1987},
+  volume    = {9},
+  number    = {2},
+  pages     = {109-134},
+  doi       = {10.1016/0378-8733(87)90009-8},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @InCollection{Krackhardt1992,
@@ -25782,6 +26117,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.12.24},
 }
 
+@Article{Luce1998,
+  author    = {Luce, P. A. and Pisoni, D. B.},
+  title     = {Recognizing Spoken Words: The Neighborhood Activation Model},
+  journal   = {Ear and Hearing},
+  year      = {1998},
+  volume    = {19},
+  number    = {1},
+  pages     = {1-36},
+  doi       = {10.1097/00003446-199802000-00001},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @InProceedings{LuczakRoesch2015,
   author    = {Luczak-Roesch, M. and Tinati, R. and Van Kleek, M. and Shadbolt, N.},
   title     = {From Coincidence to Purposeful Flow? Properties of Transcendental Information Cascades},
@@ -26644,6 +26992,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://cancerres.aacrjournals.org/content/27/2_Part_1/209},
 }
 
+@Article{Maquet1996,
+  author    = {Maquet, P. and Péters, J.-M. and Aerts, J. and Delfiore, G. and Degueldre, C. and Luxen, A. and Franck, G.},
+  title     = {Functional neuroanatomy of human rapid-eye-movement sleep and dreaming},
+  journal   = {Nature},
+  year      = {1996},
+  volume    = {383},
+  number    = {6596},
+  pages     = {163-166},
+  doi       = {10.1038/383163a0},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Mar2008,
   author    = {Mar, R. A. and Oatley, K.},
   title     = {The Function of Fiction is the Abstraction and Simulation of Social Experience},
@@ -26655,6 +27016,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/j.1745-6924.2008.00073.x},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Mar2012,
+  author    = {Mar, R. A. and Mason, M. F. and Litvack, A.},
+  title     = {How daydreaming relates to life satisfaction, loneliness, and social support: The importance of gender and daydream content},
+  journal   = {Consciousness and Cognition},
+  year      = {2012},
+  volume    = {21},
+  number    = {1},
+  pages     = {401-407},
+  doi       = {10.1016/j.concog.2011.08.001},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @InProceedings{Mara2020,
@@ -27116,6 +27490,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.06.03},
 }
 
+@Article{Maslov2004,
+  author    = {Maslov, S. and Sneppen, K. and Zaliznyak, A.},
+  title     = {Detection of topological patterns in complex networks: correlation profile of the internet},
+  journal   = {Physica A},
+  year      = {2004},
+  volume    = {333},
+  pages     = {529-540},
+  doi       = {10.1016/j.physa.2003.06.002},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @InProceedings{Mason2007,
   author    = {Mason, B. L. and Thomas, S.},
   title     = {Tags, networks, narrative: exploring the use of social software for the study of narrative in digital contexts},
@@ -27525,6 +27911,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@Article{McCarty2005a,
+  author    = {McCarty, C. and Wutich, A.},
+  title     = {Conceptual and empirical arguments for including or excluding ego from structural analyses of personal networks},
+  journal   = {Connections},
+  year      = {2005},
+  volume    = {26},
+  number    = {2},
+  pages     = {82-88},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://www.researchgate.net/publication/250894323_Conceptual_and_Empirical_Arguments_for_Including_or_Excluding_Ego_from_Structural_Analyses_of_Personal_Networks},
+}
+
 @InProceedings{McClosky2006,
   author    = {McClosky, D. and Charniak, E. and Johnson, M.},
   title     = {Effective self-training for parsing},
@@ -27866,6 +28265,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/acprof:oso/9780199797202.001.0001},
   owner     = {Vincent},
   timestamp = {2021.09.22},
+}
+
+@Article{Mednick1968,
+  author    = {Mednick, S. A.},
+  title     = {The Remote Associates Test{\ast}},
+  journal   = {Journal of Creative Behavior},
+  year      = {1968},
+  volume    = {2},
+  number    = {3},
+  pages     = {213-214},
+  doi       = {10.1002/j.2162-6057.1968.tb00104.x},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @InProceedings{Meehan1977,
@@ -28934,6 +29346,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/Neither_Led_Nor_Driven.html?id=TsxqAAAAMAAJ},
 }
 
+@Article{Morais2012,
+  author    = {Morais, A. S. and Olsson, H. and Schooler, L. J.},
+  title     = {Mapping the Structure of Semantic Memory},
+  journal   = {Cognitive Science},
+  year      = {2012},
+  volume    = {37},
+  number    = {1},
+  pages     = {125-145},
+  doi       = {10.1111/cogs.12013},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Book{Moreno1934,
   title     = {Who Shall Survive? A New Approach to the Problem of Human Interrelations},
   publisher = {Nervous and Mental Disease Publishing},
@@ -29318,6 +29743,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://web.stanford.edu/group/cslipublications/cslipublications/site/1575865521.shtml},
+}
+
+@Article{Mota2014,
+  author    = {Mota, N. B. and Furtado, R. and Maia, P. P. C. and Copelli, M. and Ribeiro, S.},
+  title     = {Graph analysis of dream reports is especially informative about psychosis},
+  journal   = {Scientific Reports},
+  year      = {2014},
+  volume    = {4},
+  pages     = {3691},
+  doi       = {10.1038/srep03691},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @InProceedings{Mott2006,
@@ -35251,6 +35688,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.19},
 }
 
+@Article{Roediger1995,
+  author    = {Roediger, H. L. and McDermott, K. B.},
+  title     = {Creating false memories: Remembering words not presented in lists.},
+  journal   = {Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  year      = {1995},
+  volume    = {21},
+  number    = {4},
+  pages     = {803-814},
+  doi       = {10.1037/0278-7393.21.4.803},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Book{Rogers1981,
   title     = {Communication Networks: Toward a New Paradigm for Research},
   publisher = {Free Press},
@@ -35682,6 +36132,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.03.25},
   url       = {https://ir.lib.uwo.ca/fimspub/65/},
+}
+
+@Article{Rubinov2010,
+  author    = {Rubinov, M. and Sporns, O.},
+  title     = {Complex network measures of brain connectivity: Uses and interpretations},
+  journal   = {NeuroImage},
+  year      = {2010},
+  volume    = {52},
+  number    = {3},
+  pages     = {1059-1069},
+  doi       = {10.1016/j.neuroimage.2009.10.003},
+  owner     = {Vincent},
+  timestamp = {2014.06.14},
 }
 
 @InProceedings{Rubner1998,
@@ -36907,6 +37370,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.15},
 }
 
+@Article{Schmitt2012,
+  author    = {Schmitt, O. and Eipert, P. and Philipp, K. and Kettlitz, R. and Fuellen, G. and Wree, A.},
+  title     = {The Intrinsic Connectome of the Rat Amygdala},
+  journal   = {Frontiers in Neural Circuits},
+  year      = {2012},
+  volume    = {6},
+  pages     = {81},
+  doi       = {10.3389/fncir.2012.00081},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @InProceedings{Schmitz2012,
   author    = {Schmitz, M. and Bart, R. and Soderland, S. and Etzioni, O.},
   title     = {Open language learning for information extraction},
@@ -36998,6 +37473,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.01},
   url       = {https://www.jstor.org/stable/27784811},
+}
+
+@Article{Schredl2003,
+  author    = {Schredl, M. and Hofmann, F.},
+  title     = {Continuity between waking activities and dream activities},
+  journal   = {Consciousness and Cognition},
+  year      = {2003},
+  volume    = {12},
+  number    = {2},
+  pages     = {298-308},
+  doi       = {10.1016/s1053-8100(02)00072-7},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
+@Article{Schredl2010,
+  author    = {Schredl, M.},
+  title     = {Characteristics And Contents Of Dreams},
+  journal   = {International Review of Neurobiology},
+  year      = {2010},
+  volume    = {92},
+  pages     = {135-154},
+  doi       = {10.1016/s0074-7742(10)92007-2},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Schredl2022,
@@ -37497,6 +37997,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/physreve.68.015101},
   owner     = {Vincent},
   timestamp = {2021.09.25},
+}
+
+@Article{Serrano2006,
+  author    = {Serrano, M. A. and Boguna, M.},
+  title     = {Percolation and epidemic thresholds in clustered networks},
+  journal   = {Physical Review Letters},
+  year      = {2006},
+  volume    = {97},
+  number    = {8},
+  pages     = {088701},
+  doi       = {10.1103/PhysRevLett.97.088701},
+  owner     = {Vincent},
+  timestamp = {2010.08.19},
 }
 
 @InCollection{Serrat2017,
@@ -39274,6 +39787,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1207/s15516709cog2901_3},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Stickgold1999,
+  author    = {Stickgold, R. and Scott, L. and Rittenhouse, C. and Hobson, J. A.},
+  title     = {Sleep-Induced Changes in Associative Memory},
+  journal   = {Journal of Cognitive Neuroscience},
+  year      = {1999},
+  volume    = {11},
+  number    = {2},
+  pages     = {182-193},
+  doi       = {10.1162/089892999563319},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Stiller2003,
@@ -42417,6 +42943,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.06.04},
 }
 
+@Article{Vitevitch2008,
+  author    = {Vitevitch, M. S.},
+  title     = {What Can Graph Theory Tell Us About Word Learning and Lexical Retrieval?},
+  journal   = {Journal of Speech, Language, and Hearing Research},
+  year      = {2008},
+  volume    = {51},
+  number    = {2},
+  pages     = {408-422},
+  doi       = {10.1044/1092-4388(2008/030)},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
+@Article{Vitevitch2012,
+  author    = {Vitevitch, M. S. and Chan, K. Y. and Roodenrys, S.},
+  title     = {Complex network structure influences processing in long-term and short-term memory},
+  journal   = {Journal of Memory and Language},
+  year      = {2012},
+  volume    = {67},
+  number    = {1},
+  pages     = {30-44},
+  doi       = {10.1016/j.jml.2012.02.008},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Book{Vladimir1968,
   title     = {Morphology of the folktale},
   publisher = {University of Texas Press},
@@ -43461,6 +44013,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/202050},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Book{Wellman1988,
+  title     = {Social structures: A network approach},
+  publisher = {Cambridge University Press},
+  year      = {1988},
+  author    = {Wellman, B. and Berkowitz, S. D.},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://psycnet.apa.org/record/1988-97324-000},
 }
 
 @Article{Wellman1990,
@@ -45212,6 +45774,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.22},
 }
 
+@Article{Yook2010,
+  author    = {Yook, S.-H. and Yun, Y.-K. and Kim, Y.},
+  title     = {Biased random walk sampling on assortative networks},
+  journal   = {Journal of the Korean Physical Society},
+  year      = {2010},
+  volume    = {56},
+  number    = {3(1)},
+  pages     = {990-993},
+  doi       = {10.3938/jkps.56.990},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Yose2016,
   author    = {Yose, J. and Kenna, R. and MacCarron, P. and Platini, T. and Tonra, J.},
   title     = {A Networks-Science Investigation into the Epic Poems of {Ossian}},
@@ -45449,6 +46024,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s13278-021-00854-9},
   owner     = {Vincent},
   timestamp = {2022.03.08},
+}
+
+@InCollection{Zadra2011,
+  author    = {Zadra, A. and Domhoff, W. G.},
+  title     = {Dream content: Quantitative findings},
+  booktitle = {Principles and practice of sleep medicine},
+  publisher = {WB Saunders Co.},
+  year      = {2011},
+  chapter   = {50},
+  pages     = {585-594},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://antoniozadra.com/sites/default/files/biblio/zadra_dream_content_ch_50_main.pdf},
 }
 
 @Article{Zajonc1968,
